--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -7,6 +7,7 @@
   <body>
     <div class="">
       <h3>To be continued...</h3>
+      {% block content %}{% endblock %}
     </div>
   </body>
 </html>
