--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -2,28 +2,26 @@
 
 {% load static %}
 
-{% block title%}Matrix{% endblock %}
+{% block title %}Matrix{% endblock %}
 
 {% block content %}
 <div class="container">
   {% if matrix %}
   {% for row in matrix %}
-    <div class="row">
+    <div class="row" style="display: inline-block;">
       {% for spot in row %}
-        <div class="">
-          {{ spot }}
-        </div>
-        <!-- {% if len(spot) > 0 %}
-          <div class="bug">
-            {{ spot[0].id }}
+        {% if spot.0 %}
+          <div class="">
+            {{ spot.0.id }}
           </div>
         {% else %}
           <div class="empty">
-
+            {{ spot }}
           </div>
-        {% endif %} -->
-      {% end for %}
+        {% endif %}
+      {% endfor %}
     </div>
   {% endfor %}
   {% endif %}
 </div>
+{% endblock %}
