front end displaying needs visuals

--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -5,9 +5,11 @@
     <title>The start</title>
   </head>
   <body>
-    <div class="">
+    <div class="container">
       <h3>To be continued...</h3>
-      {% block content %}{% endblock %}
+      <div class="matrix">
+        {% block content %}{% endblock %}
+      </div>
     </div>
   </body>
 </html>
