--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -11,7 +11,7 @@
     <div class="row" style="display: inline-block;">
       {% for spot in row %}
         {% if spot.0 %}
-          <div class="">
+          <div class="bug">
             {{ spot.0.id }}
           </div>
         {% else %}
