messing with how matrix is displayed (it was wrong)

--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
   <head>
+    <script src="{% static 'base.css' %}"></script>
+    <!-- <script src="{% static 'reset.css' %}"></script> -->
     <meta charset="utf-8">
     <title>The start</title>
   </head>
