front end displaying the movements on click of my input button need to make it automatic... looks like ill have to use JQuery

--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -1,27 +1,31 @@
 {% extends 'getby/homepage.html' %}
 
 {% load static %}
+{% csrf_token %}
 
 {% block title %}Matrix{% endblock %}
 
 {% block content %}
-<div class="container" style="display: -webkit-box;">
-  {% if matrix %}
-  {% for row in matrix %}
-    <div class="row">
-      {% for spot in row %}
-        {% if spot.0 %}
-          <div class="bug">
-            {{ spot.0.id }}
-          </div>
-        {% else %}
-          <div class="empty">
-            {{ spot }}
-          </div>
-        {% endif %}
-      {% endfor %}
-    </div>
-  {% endfor %}
-  {% endif %}
-</div>
+  <div class="container" style="display: -webkit-box;">
+    {% if matrix %}
+    {% for row in matrix %}
+      <div class="row" style="margin-right: .5%;">
+        {% for spot in row %}
+          {% if spot.0 %}
+            <div class="bug">
+              {{ spot.0.id }}
+            </div>
+          {% else %}
+            <div class="empty">
+              {{ spot }}
+            </div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    {% endfor %}
+    {% endif %}
+  </div>
+<form class="" action="/intell/" method="get">
+  <input type="submit" name="" value="run">
+</form>
 {% endblock %}
