--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
   <head>
-    <script src="{% static 'base.css' %}"></script>
+    <script src="{% static 'getby/base.css' %}"></script>
     <!-- <script src="{% static 'reset.css' %}"></script> -->
     <meta charset="utf-8">
     <title>The start</title>
