--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -5,13 +5,13 @@
 {% block title %}Matrix{% endblock %}
 
 {% block content %}
-  <div class="container" style="display: -webkit-box;">
+  <div class="container">
     {% if matrix %}
     {% for row in matrix %}
-      <div class="row" style="margin-right: .5em;">
+      <div class="row">
         {% for spot in row %}
           {% if spot.0 %}
-            <div class="bug" style="color: white; background-color: grey; text-align: center;">
+            <div class="bug">
               {{ spot.0.id }}
             </div>
           {% else %}
@@ -25,6 +25,6 @@
     {% endif %}
   </div>
 <form class="" action="/intell/" method="get">
-  <input type="submit" name="" value="run">
+  <input class="run" type="submit" name="" value="run">
 </form>
 {% endblock %}
