working well now - option to use a queen or not

--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -12,7 +12,8 @@
         {% for spot in row %}
           {% if spot.0 %}
             <div class="bug">
-              {{ spot.0.id }}
+              <!-- {{ spot.0.id }} -->
+              {{ 0 }}
             </div>
           {% else %}
             <div class="empty">
