--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -5,6 +5,8 @@
 {% block title %}Matrix{% endblock %}
 
 {% block content %}
+<h3>To be continued...</h3>
+
   <div class="container">
     {% if matrix %}
     {% for row in matrix %}
@@ -25,6 +27,7 @@
     {% endfor %}
     {% endif %}
   </div>
+
   <form class="" action="/intell/" method="get">
     <input class="run" type="submit" name="" value="run">
   </form>
