--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% csrf_token %}
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="{% static 'getby/base.css' %}" />
@@ -8,22 +9,36 @@
     <title>The start</title>
   </head>
   <body>
+
+    {% if request.get_full_path == '/' %}
+      <form class="" action="/intell/" method="get">
+        <!-- <input type="text" name="bugs" value="2">
+        <input type="text" name="size" value="25"> -->
+        <input type="submit" name="" value="run">
+      </form>
+    {% else %}
+      <!-- <h2>Moving...</h2> -->
+    {% endif %}
     <div>
-      <div class="matrix">
+      <div id="matrix" class="matrix">
         {% block content %}{% endblock %}
       </div>
     </div>
   </body>
-  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-  <script type="text/javascript">
-  setInterval(function() {
-    $.ajax({
-      type: "GET",
-      url: '',  // URL to your view that serves new info
-      success: function(data) {
-                   $('.matrix').html(data);
-                   }
-    });
-  }, 1000)
-  </script>
+    {% if request.get_full_path == '/' %}
+    {% else %}
+      <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+      <script type="text/javascript">
+      (function update() {
+        $.ajax({
+          type: "GET",
+          url: '',  // URL to your view that serves new info
+          success: function(data) {
+            $('#matrix').html(data);
+            var refInterval = window.setTimeout(update, 100000);
+          }
+        });
+      })();
+      </script>
+    {% endif %}
 </html>
