--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -27,7 +27,7 @@
   </body>
     {% if request.get_full_path == '/' %}
     {% else %}
-      <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+      <script src="{% static 'getby/jqmin.js' %}" type="text/javascript"></script>
       <script type="text/javascript">
       (function update() {
         $.ajax({
@@ -38,7 +38,7 @@
             // var refInterval = window.setTimeout(update, 150000);
           }
         }).then(function() {           // on completion, restart
-          setTimeout(update, 200000);  // function refers to itself
+          setTimeout(update, 300000);  // function refers to itself
         });
       })();
       </script>
