--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 {% load static %}
-<!-- {% csrf_token %} -->
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="{% static 'getby/base.css' %}" />
-    <!-- <script src="{% static 'reset.css' %}"></script> -->
     <meta charset="utf-8">
     <title>The start</title>
   </head>
@@ -17,7 +15,7 @@
         <input type="submit" name="" value="run">
       </form>
     {% else %}
-      <!-- <h2>Moving...</h2> -->
+
     {% endif %}
     <div>
       <div id="matrix" class="matrix">
@@ -28,19 +26,19 @@
     {% if request.get_full_path == '/' %}
     {% else %}
       <script src="{% static 'getby/jqmin.js' %}" type="text/javascript"></script>
-      <script type="text/javascript">
-      (setTimeout(function() {
-        update();
-      }, 55))();
-      function update() {
-        $.ajax({
-          type: "GET",
-          url: '',  // URL to your view that serves new info
-          success: function(data) {
-            $('#matrix').html(data);
-          }
-        });
-      };
+      <script type="text/javascript" src="{% static 'getby/app.js' %}">
+      // (setTimeout(function() {
+      //   update();
+      // }, 55))();
+      // function update() {
+      //   $.ajax({
+      //     type: "GET",
+      //     url: '',  // URL to your view that serves new info
+      //     success: function(data) {
+      //       $('#matrix').html(data);
+      //     }
+      //   });
+      // };
       </script>
     {% endif %}
 </html>
