bugs are dying from starvation fairly gracefully

--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -25,7 +25,7 @@
   </body>
     {% if request.get_full_path == '/' %}
     {% else %}
-      <script src="{% static 'getby/jqmin.js' %}" type="text/javascript"></script>
+      <!-- <script src="{% static 'getby/jqmin.js' %}" type="text/javascript"></script>
       <script type="text/javascript" src="{% static 'getby/app.js' %}">
       // (setTimeout(function() {
       //   update();
@@ -39,6 +39,6 @@
       //     }
       //   });
       // };
-      </script>
+      </script> -->
     {% endif %}
 </html>
