--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -7,7 +7,9 @@
 {% block content %}
 <h3>Moving...</h3>
   <div class="">
-    {{ bug }}
+    {% if bug %}
+      {{ bug }}
+    {% endif %}
   </div>
   <br>
   <div class="container">
@@ -40,4 +42,12 @@
   <form class="" action="/intell/" method="post">{% csrf_token %}
     <input class="run" type="submit" name="" value="feed">
   </form>
+  {% if bugs %}
+    <script src="{% static 'getby/jqmin.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="{% static 'getby/app.js' %}"></script>
+  {% else %}
+    <script type="text/javascript">
+      clearTimeout()
+    </script>
+  {% endif %}
 {% endblock %}
