--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -10,6 +10,9 @@
     {% if bug %}
       {{ bug }}
     {% endif %}
+    {% if bugs %}
+      {{ bugs }} live bugs
+    {% endif %}
   </div>
   <br>
   <div class="container">
