further testing of when all bugs expire

--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -9,6 +9,9 @@
     {% if bug %}
       {{ bug }}
     {% endif %}
+    {% if cd %}
+      {{ cd }}
+    {% endif %}
     {% if bugs %}
       <h3>Moving...</h3>
       {{ bugs }} live bugs
