--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -12,6 +12,9 @@
     {% if cd %}
       {{ cd }}
     {% endif %}
+    {% if id %}
+      {{ id }}
+    {% endif %}
     {% if bugs %}
       <h3>Moving...</h3>
       {{ bugs }} live bugs
