bugs breed with anyone except itself need to refactor some issues

--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -36,7 +36,7 @@
             {% if spot.0 %}
               {% if spot.0.id %}
                 <div class="bug">
-                  {{ spot.0.id }}
+                  {{ spot.0.gen }}
                   <!-- {{ 0 }} -->
                 </div>
               {% else %}
