--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -18,13 +18,25 @@
     {% if young %}
       {{ young }}
     {% endif %}
-    {% if bugs %}
+    {% if bugs > 2 %}
       <h3>Moving...</h3>
       {{ bugs }} live bugs
     {% else %}
       <div class="">
         You let them all die...<br>Restart server to continue
       </div>
+      <script type="text/javascript">
+        clearTimeout()
+        (function update() {
+          $.ajax({
+            type: "GET",
+            url: '/nobugs',  // URL to your view that serves new info
+            success: function(data) {
+              $('#matrix').html(data)
+            }
+          })
+        })()
+      </script>
     {% endif %}
   </div>
   <br>
