heroku deploy take 7 static cache working, somehow heroku is creating two matricies and switching between both--got rid of home page bug and matrix size selection

--- a/getby/templates/getby/homepage.html
+++ b/getby/templates/getby/homepage.html
@@ -10,8 +10,8 @@
 
     {% if request.get_full_path == '/' %}
       <form class="" action="/intell/" method="get">
-        <input type="text" name="bugs" value="2">
-        <input type="text" name="size" value="25">
+        <!-- <input type="text" name="bugs" value="2">
+        <input type="text" name="size" value="25"> -->
         <input type="submit" name="" value="run">
       </form>
     {% endif %}
