--- a/getby/templates/getby/matrix.html
+++ b/getby/templates/getby/matrix.html
@@ -7,16 +7,10 @@
 {% block content %}
   <div class="">
     {% if old %}
-      {{ old }}
+      Eldest bug:&emsp;&ensp;&ensp;{{ old }} {{ oldcd }} {{ oldid }}<br>
     {% endif %}
     {% if bug %}
-      {{ bug }}
-    {% endif %}
-    {% if cd %}
-      {{ cd }}
-    {% endif %}
-    {% if young %}
-      {{ young }}
+      Last born bug: &ensp;{{ bug }} {{ cd }} {{ young }}
     {% endif %}
     {% if bugs > 0 %}
       <h3>Moving...</h3>
